# lusbip

./: .gitignore  AGENTS.md  Cargo.toml  HARNESS.md  README.md  THIRD_PARTY.md
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  EXECUTION_PLAN.md  PRODUCT_SPEC.md  QUALITY.md
docs/superpowers/plans/: 2026-07-14-import-device-lifecycle.md  2026-07-15-host-configuration-descriptor-plan.md  2026-07-16-background-client-agent.md  2026-07-16-persistent-bulk-in-usbip.md  2026-07-17-buffered-ch340-bulk-out.md  2026-07-17-bulk-out-worker.md  2026-07-17-local-ch340-proxy.md  2026-07-18-ch341-large-write-urb.md
docs/superpowers/specs/: 2026-07-14-import-device-lifecycle-design.md  2026-07-15-host-configuration-descriptor-design.md  2026-07-16-background-client-agent-design.md  2026-07-17-local-ch340-proxy-design.md  2026-07-18-ch341-large-write-urb-design.md
src/: app_tui.rs  cli.rs  client.rs  client_agent.rs  lib.rs  main.rs  process.rs  server.rs  tui.rs  usb.rs
src/usbip_server/: cdc.rs  consts.rs  device.rs  endpoint.rs  hid.rs  host.rs  interface.rs  mod.rs  setup.rs  usbip_protocol.rs  util.rs
tests/: cli_and_usb.rs  cli_parse.rs  client_agent.rs  client_parsing.rs
