[package]
name = "lusbip"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
name = "lusbip"
path = "src/lib.rs"

[[bin]]
name = "lusbip"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
env_logger = "0.11"
log = "0.4"
nusb = { version = "0.2", features = ["tokio"] }
num-derive = "0.4"
num-traits = "0.2"
thiserror = "2"
tokio = { version = "1", features = ["full"] }

[features]
default = []
serde = []
